--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -46,6 +46,8 @@ jobs:
           python-version: 3.8
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Semantic Release
         run: |
           pip install python-semantic-release
