--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,5 @@ version_variable = [
 ]
 branch = "master"
 upload_to_pypi = false
-upload_to_release = false
+upload_to_release = true
 build_command = "pip install poetry && poetry build"
