Set PYPI token as env

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,4 @@ jobs:
           pip install python-semantic-release
           git config user.name github-actions
           git config user.email github-actions@github.com
-          semantic-release publish
-        with:
-          pypi_token: ${{ secrets.PYPI_API_TOKEN }}
+          PYPI_TOKEN=${{ secrets.PYPI_API_TOKEN }} semantic-release publish
