--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,10 @@ include = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-loguru = "^0.5.3"
-pandas = "^1.3.2"
+loguru = "^0.6.0"
+pandas = "^1.4.0"
 joblib = "^1.0.1"
+tqdm = "^4.62.3"
 
 [tool.poetry.dev-dependencies]
 coverage = "^5.5"
