--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ pytest-cov = "^2.10.1"
 black = {version = "^20.8b1", allow-prereleases = true}
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core==1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.semantic_release]
